@@ -19,6 +19,23 @@
 		<mongo-driver.version>3.12.14</mongo-driver.version>
 		<logback.version>1.4.8</logback.version>
 		<commons-validator.version>1.7</commons-validator.version>
+		<log4j.version>2.20.0</log4j.version>
+		<picocli.version>4.7.3</picocli.version>
+
+		<surefire.version>3.1.2</surefire.version>
+		<clean-plugin.version>3.3.1</clean-plugin.version>
+		<resources-plugin.version>3.3.1</resources-plugin.version>
+		<compiler-plugin.version>3.11.0</compiler-plugin.version>
+		<jar-plugin.version>3.3.0</jar-plugin.version>
+		<site-plugin.version>4.0.0-M9</site-plugin.version>
+		<jacoco.version>0.8.10</jacoco.version>
+		<coveralls.version>4.3.0</coveralls.version>
+		<jaxb-api.version>2.3.1</jaxb-api.version>
+		<pitest.version>1.14.1</pitest.version>
+		<sonar.version>3.9.1.2184</sonar.version>
+		<build-helper.version>3.4.0</build-helper.version>
+		<failsafe.version>3.1.2</failsafe.version>
+		<docker-plugin.version>0.43.0</docker-plugin.version>
 
 		<sonar.issue.ignore.multicriteria>e11</sonar.issue.ignore.multicriteria>
 
@@ -30,6 +47,7 @@
 		</sonar.issue.ignore.multicriteria.e11.resourceKey>
 
 		<sonar.coverage.exclusions>
+			**/app/*.*,
 			**/model/*.*
 		</sonar.coverage.exclusions>
 	</properties>
@@ -68,29 +86,65 @@
 			<artifactId>commons-validator</artifactId>
 			<version>${commons-validator.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>info.picocli</groupId>
+			<artifactId>picocli</artifactId>
+			<version>${picocli.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>3.1.2</version>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${clean-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${resources-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${compiler-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${jar-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire.version}</version>
 					<configuration>
-						<linkXRef>false</linkXRef>
+						<argLine>${argLine} --add-opens java.base/java.util=ALL-UNNAMED</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
+					<artifactId>maven-surefire-report-plugin</artifactId>
+					<version>${surefire.version}</version>
+				</plugin>
+				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.12.1</version>
+					<version>${site-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.8</version>
+					<version>${jacoco.version}</version>
 					<configuration>
 						<excludes>
 							<exclude>**/Note.*</exclude>
+							<exclude>**/app/*.*</exclude>
 						</excludes>
 					</configuration>
 					<executions>
@@ -105,25 +159,26 @@
 				<plugin>
 					<groupId>org.eluder.coveralls</groupId>
 					<artifactId>coveralls-maven-plugin</artifactId>
-					<version>4.3.0</version>
+					<version>${coveralls.version}</version>
 					<dependencies>
 						<dependency>
 							<groupId>javax.xml.bind</groupId>
 							<artifactId>jaxb-api</artifactId>
-							<version>2.3.1</version>
+							<version>${jaxb-api.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.pitest</groupId>
 					<artifactId>pitest-maven</artifactId>
-					<version>1.14.1</version>
+					<version>${pitest.version}</version>
 					<configuration>
 						<targetClasses>
 							<param>com.examples.notebook.controller.*</param>
 						</targetClasses>
 						<targetTests>
-							<param>com.examples.notebook.controller.NotebookControllerTest</param>
+							<param>
+								com.examples.notebook.controller.NotebookControllerTest</param>
 						</targetTests>
 						<mutators>
 							<mutator>DEFAULTS</mutator>
@@ -134,7 +189,7 @@
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.9.1.2184</version>
+					<version>${sonar.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -142,7 +197,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.4.0</version>
+				<version>${build-helper.version}</version>
 				<executions>
 					<execution>
 						<id>add-test-source</id>
@@ -153,6 +208,7 @@
 						<configuration>
 							<sources>
 								<source>src/it/java</source>
+								<source>src/e2e/java</source>
 							</sources>
 						</configuration>
 					</execution>
@@ -161,25 +217,42 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>${failsafe.version}</version>
 				<configuration>
 					<systemPropertyVariables>
 						<mongo.port>${mongo.mapped.port}</mongo.port>
 					</systemPropertyVariables>
+					<argLine>${argLine} --add-opens java.base/java.util=ALL-UNNAMED</argLine>
 				</configuration>
 				<executions>
 					<execution>
+						<id>default-it</id>
 						<goals>
 							<goal>integration-test</goal>
 							<goal>verify</goal>
 						</goals>
+					</execution>
+					<execution>
+						<id>e2e-tests</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<exclude>**/*IT.java</exclude>
+							</excludes>
+							<includes>
+								<include>**/*E2E.java</include>
+							</includes>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.43.0</version>
+				<version>${docker-plugin.version}</version>
 				<configuration>
 					<images>
 						<image>
